test/corpus/pipelines.txt
================================================================================
Simple pipeline
================================================================================

from employees

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (term
        (field
          (identifier))))))

================================================================================
Simple pipeline with tansform
================================================================================

from employees
derive gross_salary

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (term
        (field
          (identifier))))
    (transforms
      (derives
        (keyword_derive)
        (term
          (field
            (identifier)))))))

================================================================================
Simple pipeline with tansform and sort
================================================================================

from employees
derive gross_salary
sort gross_salary

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (term
        (field
          (identifier))))
    (transforms
      (derives
        (keyword_derive)
        (term
          (field
            (identifier))))
      (sorts
        (keyword_sort)
        (term
          (field
            (identifier)))))))

================================================================================
Full example CTE
================================================================================

from e = employees
derive gross_salary
sort gross_salary
take 10..100

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (term
        (binary_expression
          (field
            (identifier))
          (field
            (identifier)))))
    (transforms
      (derives
        (keyword_derive)
        (term
          (field
            (identifier))))
      (sorts
        (keyword_sort)
        (term
          (field
            (identifier))))
      (takes
        (keyword_take)
        (binary_expression
          (literal)
          (literal))))))

================================================================================
Pipeline with aliased column select
================================================================================

from e = employees
select e.first_name

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (term
        (binary_expression
          (field
            (identifier))
          (field
            (identifier)))))
    (transforms
      (select
        (keyword_select)
        (table_reference
          (field
            (identifier)
            (identifier)))))))

================================================================================
Pipeline with column select
================================================================================

from employees
filter department == "Product"
select [first_name, last_name]

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (term
        (field
          (identifier))))
    (transforms
      (filter
        (keyword_filter)
        (binary_expression
          (field
            (identifier))
          (literal)))
      (select
        (keyword_select)
        (table_reference
          (term
            (field
              (identifier)))
          (term
            (field
              (identifier))))))))

================================================================================
Lists
================================================================================

from numbers
derive [x = 1, y = 2]
derive [
  a = x,
  b = y
]
derive [
  c = a,
  d = b,
]

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (term
        (field
          (identifier))))
    (transforms
      (derives
        (keyword_derive)
        (term
          (binary_expression
            (field
              (identifier))
            (literal)))
        (term
          (binary_expression
            (field
              (identifier))
            (literal))))
      (derives
        (keyword_derive)
        (term
          (binary_expression
            (field
              (identifier))
            (field
              (identifier))))
        (term
          (binary_expression
            (field
              (identifier))
            (field
              (identifier)))))
      (derives
        (keyword_derive)
        (term
          (binary_expression
            (field
              (identifier))
            (field
              (identifier))))
        (term
          (binary_expression
            (field
              (identifier))
            (field
              (identifier))))))))

================================================================================
Aggregates
================================================================================

from employees
aggregate [
  average salary,
  ct = count
]

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (term
        (field
          (identifier))))
    (transforms
      (aggregate
        (keyword_aggregate)
        (aggregate_operation
          (keyword_average)
          (field
            (identifier)))
        (binary_expression
          (field
            (identifier))
          (field
            (identifier)))))))

================================================================================
Comments
================================================================================

from employees # comment

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (term
        (field
          (identifier)))))
  (comment))

================================================================================
Joins
================================================================================

from employees
join side:left positions [employees.id==positions.employee_id]

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (term
        (field
          (identifier))))
    (transforms
      (joins
        (keyword_join)
        (keyword_side)
        (keyword_left)
        (term
          (field
            (identifier)))
        (conditions
          (binary_expression
            (field
              (identifier)
              (identifier))
            (field
              (identifier)
              (identifier))))))))

================================================================================
Joins with alias
================================================================================

from employees
join side:left p=positions [employees.id==p.employee_id]

--------------------------------------------------------------------------------

(program
  (pipeline
    (from
      (keyword_from)
      (term
        (field
          (identifier))))
    (transforms
      (joins
        (keyword_join)
        (keyword_side)
        (keyword_left)
        (term
          (binary_expression
            (field
              (identifier))
            (field
              (identifier))))
        (conditions
          (binary_expression
            (field
              (identifier)
              (identifier))
            (field
              (identifier)
              (identifier))))))))
